Mon Jun 23 15:28:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Svc_Conf_y.cpp:

          Fix fuzz errors incorrect ACE_TMAIN/main use; commit generated 2nd.

Mon Jun 23 15:27:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Svc_Conf.y:

          Fix fuzz errors incorrect ACE_TMAIN/main use; commit source 1st.

Mon Jun 23 13:51:23 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Windows_Monitor.h:
        
          Changed class member type from ACE_CString to ACE_TString
          to accomondate Unicode builds.
           
        * ace/Monitor_Control/Windows_Monitor.cpp:
        
          Removed incorrect use of ACE_TEXT wrapper on a non-literal.

Mon Jun 23 12:34:35 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Added the new Notify Timeout test.

Mon Jun 23 12:09:26 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/C++NPv2/display_logfile.cpp: Divided an ACE_TCHAR
          string by sizeof (ACE_TCHAR) to get the appropriate size.
          Thanks to J.T. <jtc at acorntoolworks dot com> for reporting
          this.

Mon Jun 23 11:12:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Svc_Conf_y.cpp:
        * bin/LabVIEW_RT/labview_test_controller/test.cpp:
        * ASNMP/examples/trap/trap.cpp:
        * ASNMP/examples/get/get.cpp:
        * ASNMP/examples/get/get_async.cpp:
        * ASNMP/examples/set/set.cpp:
        * ASNMP/examples/next/next.cpp:
        * ASNMP/examples/walk/walk.cpp:
        * netsvcs/clients/Tokens/mutex/test_mutex.cpp:
        * performance-tests/RPC/client.cpp:
        * tests/Bug_2980_Regression_Test.cpp:

          Fix fuzz errors incorrect ACE_TMAIN/main use.

Sun Jun 22 17:23:08 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/CPU_Load_Monitor.cpp:
        * ace/Monitor_Control/Memory_Usage_Monitor.cpp: