@@ -52,6 +52,10 @@ namespace ACE
       ACE_UINT64 value_;
       
     private:
+      void init (void);
+      void fetch (ACE_UINT64& value) const;
+
+      ACE_UINT64 start_;
       ACE_CString lookup_str_;
     };
   }
