@@ -1,3 +1,11 @@
+Tue Jun 24 00:03:27 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * ace/Monitor_Control/BSD_Network_Interface_Monitor.cpp:
+        * ace/Monitor_Control/BSD_Network_Interface_Monitor.h:
+
+          Changed to fetch current value in constructor, and subtract 
+          that from subsequent values in each update() call.
+        
 Mon Jun 23 15:28:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
 
         * ace/Svc_Conf_y.cpp:
